--- a/drzewo1.html
+++ b/drzewo1.html
@@ -6,9 +6,7 @@
     <title>Mapa</title>
     <style>
       body {
-        background-image: url("images/jezioro.png");
-        background-size: cover;
-        background-position: center; /* Wyśrodkowanie tła */
+        background-image: url("images/tree.png");
       }
 
       .tile {
@@ -42,12 +40,17 @@
 
       .tile-4 {
         top: 70%;
-        left: 75%;
+        left: 60%;
       }
 
       .tile-5 {
         top: 80%;
-        left: 10%;
+        left: 40%;
+      }
+
+      .tile-6 {
+        top: 50%;
+        left: 50%;
       }
       .image-container {
         position: absolute;
@@ -117,30 +120,46 @@
       <img src="images/jas2.png" alt="Obrazek w rogu" class="top-left-image" />
       <div class="image-caption">Gandalf</div>
     </div>
-    <div class="tile1 tooltip">
-      <span class="tooltiptext"><h5>Kontratak Traxlera</h5></span>
-    </div>
+
     <div class="tile tile-2">
       <div class="tooltip">
         <a href="drzewo1.html">
-          <img src="images/duck.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>Giuoco Piano</h5></span></a
+          <img src="images/ptak0.png" width="100px" height="100px" />
+          <span class="tooltiptext"><h5>Typowe motywy</h5></span></a
         >
       </div>
     </div>
     <div class="tile tile-3">
-      <a href="https://lichess.org/study/D0s4rxGY/DKYuTsoe"><h3></h3></a>
+      <div class="tooltip">
+        <a href="https://lichess.org/study/D0s4rxGY/DKYuTsoe"
+          ><img src="images/ptak1.png" width="100px" height="100px" />
+          <span class="tooltiptext"><h5>Historia</h5></span></a
+        >
+      </div>
     </div>
     <div class="tile tile-4">
       <div class="tooltip">
         <a href="https://lichess.org/study/D0s4rxGY/SuicxJaI"
-          ><img src="images/smok.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>Smażona Wątróbka</h5></span></a
+          ><img src="images/ptak2.png" width="100px" height="100px" />
+          <span class="tooltiptext"><h5>Typowe pozycje</h5></span></a
         >
       </div>
     </div>
     <div class="tile tile-5">
-      <a href="https://lichess.org/study/N7FznfeZ/v298r0f9"><h3></h3></a>
+      <div class="tooltip">
+        <a href="https://lichess.org/study/D0s4rxGY/DKYuTsoe"
+          ><img src="images/ptak0.png" width="100px" height="100px" />
+          <span class="tooltiptext"><h5>Słynni gracze</h5></span></a
+        >
+      </div>
+    </div>
+    <div class="tile tile-6">
+      <div class="tooltip">
+        <a href="https://lichess.org/study/D0s4rxGY/DKYuTsoe"
+          ><img src="images/ptak2.png" width="100px" height="100px" />
+          <span class="tooltiptext"><h5>Plany gry</h5></span></a
+        >
+      </div>
     </div>
   </body>
 </html>
