--- a/edu.html
+++ b/edu.html
@@ -2,42 +2,237 @@
 <html lang="pl">
   <head>
     <meta charset="UTF-8" />
-    <title>Walory gry w szachy</title>
+    <title>Dlaczego warto grać w szachy?</title>
     <link rel="stylesheet" href="style1.css" />
   </head>
   <body>
     <header>
-      <h1>Edukacyjne i wychowawcze walory gry w szachy</h1>
-      <p>Dlaczego warto uczyć dzieci i młodzież gry w szachy?</p>
+      <h1>Dlaczego warto grać w szachy?</h1>
+      <p>
+        Szachy jako narzędzie wszechstronnego rozwoju dziecka i społeczeństwa
+      </p>
     </header>
 
     <section>
-      <h2>Korzyści edukacyjne</h2>
-      <ul>
-        <li>Rozwija logiczne i strategiczne myślenie</li>
-        <li>Wzmacnia koncentrację i pamięć</li>
-        <li>Uczy cierpliwości oraz planowania</li>
-        <li>Pomaga w nauce matematyki i rozwiązywaniu problemów</li>
-      </ul>
+      Dz.U.UE.C.2013.251E.116/2Akt nienormatywny Wersja od: 31 sierpnia 2013 r.
+      Wprowadzenie do systemów oświaty w Unii Europejskiej programu &quot;Szachy
+      w szkole&quot; P7_TA(2012)0097 Oświadczenie Parlamentu Europejskiego z
+      dnia 15 marca 2012 r. w sprawie wprowadzenia do systemów oświaty w Unii
+      Europejskiej programu &quot;Szachy w szkole&quot; (2013/C 251 E/24)
+      (Dz.U.UE C z dnia 31 sierpnia 2013 r.) Parlament Europejski, –
+      uwzględniając art. 6 i 165 Traktatu o funkcjonowaniu Unii Europejskiej, –
+      uwzględniając art. 123 Regulaminu, A. mając na uwadze, że art. 6 Traktatu
+      o funkcjonowaniu Unii Europejskiej stanowi, iż sport należy do dziedzin, w
+      których &quot;Unia ma kompetencje do prowadzenia działań mających na celu
+      wspieranie, koordynowanie lub uzupełnianie działań państw
+      członkowskich&quot;; B. mając na uwadze, że szachy są grą dostępną dla
+      dzieci z każdej grupy społecznej, mogą przyczyniać się do osiągnięcia
+      spójności społecznej i realizacji celów politycznych takich jak integracja
+      społeczna, zwalczanie dyskryminacji, zmniejszenie wskaźnika przestępczości
+      czy nawet walka z różnymi rodzajami uzależnień; C. mając na uwadze, że bez
+      względu na wiek dziecka szachy mogą poprawić jego koncentrację, zwiększyć
+      cierpliwość i wytrwałość, a także rozwinąć zmysł twórczy, intuicję, pamięć
+      oraz umiejętności analitycznego myślenia i podejmowania decyzji; mając na
+      uwadze, że gra w szachy uczy też determinacji, motywacji i sportowego
+      zachowania; 1. wzywa Komisję i państwa członkowskie, by dążyły do
+      wprowadzenia do systemów oświaty państw członkowskich programu
+      &quot;Szachy w szkole&quot;; 2. apeluje do Komisji, by w następnym
+      komunikacie dotyczącym sportu poświęciła należną uwagę programowi
+      &quot;Szachy w szkole&quot; i zapewniła jego dostateczne finansowanie
+      począwszy od 2012 r.; 3. zwraca się do Komisji o wzięcie pod uwagę wyników
+      wszelkich badań nad wpływem tego programu na rozwój dziecka; 4.
+      zobowiązuje przewodniczącego do przekazania niniejszego oświadczenia, wraz
+      z nazwiskami sygnatariuszy 1 , Komisji oraz parlamentom państw
+      członkowskich. 1 Lista sygnatariuszy jest opublikowana w załączniku 3 do
+      protokołu z dnia 15 marca 2012 r. (P7_PV(2012)03-15(ANN3)). Dlaczego warto
+      grać w szachy? Oto siedem najważniejszych powodów.
+      <a
+        href=" https://www.chessforkids.pl/blog/blog/248_7-powodow-dla-ktorych-warto-grac-w-szachy
+        "
+        target="_blank"
+        >https://www.chessforkids.pl/blog/blog/248_7-powodow-dla-ktorych-warto-grac-w-szachy</a
+      >
     </section>
 
     <section>
-      <h2>Walory wychowawcze</h2>
-      <ul>
-        <li>Kształtuje postawę fair play</li>
-        <li>Uczy samodzielności i odpowiedzialności za decyzje</li>
-        <li>Pomaga w radzeniu sobie z porażką i stresem</li>
-        <li>Sprzyja budowaniu relacji międzyludzkich i współpracy</li>
-      </ul>
+      <h2>🧠 Siedem powodów, dla których warto grać w szachy</h2>
+
+      <h3>1. Poprawa zdolności intelektualnych</h3>
+      <p>
+        Największe korzyści z gry w szachy odnoszą dzieci powyżej 5 roku życia.
+        Na podstawie badań, naukowcy Krogius oraz Groot opisali poprawę
+        zdolności koncentracji oraz progres rozwoju wyobraźni. Z kolei badaczka
+        Diane Hogan, zaobserwowała dodatkowo zwiększenie umiejętności 
+        porządkowania myśli, planowania oraz wzrost zrozumienia zależności
+        pomiędzy własnymi działaniami i ich konsekwencjami.
+      </p>
+
+      <h3>2. Zwiększenie IQ</h3>
+      <p>
+        Badanie Murray’a Thompsona z Australii przeprowadzone w 2003 r.
+        dowiodło, że gra w szachy wpływa na wzrost ilorazu inteligencji.
+        Thompson przypisał ten fakt treningowi koncentracji i logicznego
+        myślenia nieodzownym w nauce gry w szachy. Wzrostu IQ dowiodły również
+        wcześniejsze badania z Wenezueli, gdzie dzieci odbyły 4,5 miesięczny
+        kurs gry w szachy.
+      </p>
+
+      <h3>3. Rozwój krytycznego myślenia</h3>
+      <p>
+        Wpływ gry w szachy na mózg człowieka to obszar badań, którym naukowcy
+        zajmują się od wielu lat. W 1995 r. Robert Ferguson odpowiadając na
+        pytanie dlaczego grać w szachy dowiódł, że szachy są doskonałą pomocą w
+        kształtowaniu umiejętności krytycznego myślenia, natomiast inni badacze
+        (Betancort, Groot, Krogius) nie dość, że potwierdzają te spostrzeżenia,
+        to jeszcze dodają kolejne korzyści - koncentrację, refleks, poprawę
+        koordynacji ruchowej oraz rozwój zdolności organizacyjnych i planowania.
+      </p>
+
+      <h3>4. Poprawa umiejętności matematycznych</h3>
+      <p>
+        Inne badanie przeprowadzone przez Jamesa Smitha i Roberta Cage’a
+        oceniało wpływ nauczania gry w szachy na osiągnięcia matematyczne
+        młodzieży. Wyniki pokazały, że szachy są wręcz kluczowe dla rozwoju
+        umiejętności matematycznych. Młodzi ludzie, którzy odbyli 120 godzin
+        nauki w ramach eksperymentu, mieli znacznie lepsze wyniki testów
+        matematycznych. Badacze przypisali te rezultaty wpływowi gry na zdolność
+        przetworzenia napływających bodźców (czyli zdolność postrzegania) oraz
+        nadania im odpowiedniego znaczenia. Inna badaczka,  Dr Erica Gottlieba z
+        Rhodes University uważa, że uzyskany efekt to wpływ konieczności
+        obmyślania strategii. Niezależnie od przyczyn, szachy z pewnością
+        przyczyniają się do zwiększenia umiejętności matematycznych dzieci i
+        młodzieży.
+      </p>
+
+      <h3>5. Rozwój zdolności językowych</h3>
+      <p>
+        Wydaje się niemożliwe, żeby gra, w której nie używa się słów zarówno w
+        formie mówionej, jak i pisanej, mogła wpływać na rozwój zdolności
+        językowych. A jednak. Albert Frank w swojej publikacji „Szachy i
+        zdolności” opisuje eksperyment, w którym obserwowano grupę dzieci 2h
+        tygodniowo poświęcających na szachy. Po tym czasie odnotowano znaczną
+        poprawę umiejętności matematycznych, większą płynność wykonywania zadań
+        strategicznych oraz poprawę zdolności językowych.
+      </p>
+
+      <h3>6. Inteligencja emocjonalna i społeczne kompetencje</h3>
+      <p>
+        Inteligencja emocjonalna to zdolność do dostrzegania, kontroli oraz
+        zdefiniowania emocji. Okazuje się, że młodzi ludzie uczące się gry w
+        szachy w porównaniu np.  do bejsbolistów, osiągają lepsze efekty
+        współpracy oraz większe korzyści  z zaangażowania społecznego w życie
+        uczelni. Wykładowcy oceniali tę grupę jako studentów bardziej
+        zadowolonych ze szkoły oraz nauczycieli, lubiących naukę oraz
+        czerpiących większą satysfakcję z własnej pracy, odznaczających się
+        większą pewnością siebie oraz umiejętnościami rozwiązywania problemów.
+      </p>
+
+      <h3>7. Walory terapeutyczne</h3>
+      <p>
+        Poza wpływem na rozwój intelektualny oraz emocjonalny, szachy pomagają
+        zapobiegać chorobom neurodegeneracyjnym charakterystycznym dla osób
+        starszych, m. in. demencji czy chorobie Alzheimera. Ponieważ pomagają
+        trenować myślenie przyczynowo-skutkowe oraz zauważanie zależności między
+        zdarzeniami. Szachy to wspaniała gra dla każdego. Nie trzeba urodzić się
+        ze specjalnymi umiejętnościami, żeby się jej nauczyć oraz czerpać radość
+        z rozgrywek. Innymi słowy każdy człowiek może przyswoić sobie zasady gry
+        i sięgnąć po nią w dowolnym momencie swojego życia - nie tylko jako
+        dziecko.
+      </p>
     </section>
 
     <section>
-      <h2>Powrót</h2>
-      <p><a href="zajecia.html">← Wróć do strony głównej kursu</a></p>
+      <h2>
+        👪 Edukacja szachowa dzieci i młodzieży: Dlaczego według badań warto,
+        żeby dzieci grały w szachy
+      </h2>
+      <p>
+        (
+        https://focusonbusiness.eu/pl/wiadomosci/edukacja-szachowa-dzieci-i-mlodziezy-dlaczego-wedlug-
+        badan-warto-zeby-dzieci-graly-w-szachy/26181 ) „Nauczcie dzieci grać w
+        szachy, a o ich przyszłość możecie być spokojni” – to słowa Paula
+        Morphy’ego – nieoficjalnego szachowego mistrza świata w latach
+        1858–1884. Dlaczego warto grać w szachy? Ponieważ podczas partii szachów
+        dziecko rozwija nie tylko umiejętności stricte związane z samą królewską
+        grą, ale i inne – coraz bardziej przydatne w dzisiejszym świecie –
+        kompetencje. Jedną z osób, które postanowiły to potwierdzić, jest
+        profesor Robert Boruch z Uniwersytetu Pensylwanii. W 2011 roku w 33
+        szkołach we Włoszech przeprowadził badanie, którego celem było
+        sprawdzenie, czy umiejętność gry w szachy poprawia zdolności
+        matematyczne uczniów. Założenia całego eksperymentu były następujące:
+        test matematyczny przed wprowadzeniem zajęć szachowych, 30-godzinny kurs
+        szachów pod okiem certyfikowanego instruktora, ponowna weryfikacja
+        umiejętności matematycznych uczniów. Badanie potwierdziło to, co
+        wcześniej odkryli inni naukowcy (m.in. Robert M. Berkman w 2004 r. i
+        Guillermo Campitelli w 2008): szachy rozwijają kompetencje matematyczne.
+        Dzieci, które uczestniczyły w zajęciach nauki gry w szachy, poprawiły
+        rezultaty swoich testów o 12%. Z kolei według badań Roberta Fergusona
+        (ACF, 1983) wśród dzieci, które grały w szachy, o 17,3% wzrosła zdolność
+        do krytycznego myślenia (w porównaniu do uczniów biorących udział w
+        innych wspomagających formach zajęć, którzy poprawili się o 4,6%). Jakie
+        jeszcze umiejętności przydatne życiowo może rozwinąć u Twojego dziecka
+        gra w szachy? Poza wyżej wymienionymi kompetencjami matematycznymi i
+        krytycznego myślenia z moich obserwacji wynika, że młodzi szachiści na
+        ogół mają lepiej rozwiniętą pamięć, zdolność do koncentracji – która w
+        świecie przebodźcowania odgrywa coraz większą rolę – oraz nawyk
+        dyscypliny, szczególnie ważny w królewskiej grze, jaką są szachy.
+        Umiejętność zachowania swojej dyscypliny jest fundamentem sukcesu w
+        dorosłym życiu, a szachy jak mało który sport pomagają w jej rozwijaniu.
+        Często jest w partii szachów tak, że jeden błąd niweczy cały wysiłek i
+        potrafi obrócić wygraną pozycję w natychmiastową porażkę. W mojej opinii
+        istotne jest to, że dzieci uczą się tych zdolności często nieświadomie,
+        szczególnie na początku nauki gry w szachy. Nauka umiejętności
+        przydatnych życiowo odbywa się w ramach „dodatku” do gry w szachy, co
+        pozwala wzrastać młodym szachistom zarówno w sferze gry, jak i w ramach
+        wyżej wymienionych kompetencji, które w dorosłym życiu mogą i często
+        odgrywają szczególną rolę. 4 Poza tym szachy stanowią również ukrytą
+        wartość, na początku niezauważalną przez dzieci: szachy są sprawiedliwe.
+        Nie można przenieść odpowiedzialności na boczny podmuch wiatru lub na
+        sędziego, który odgwizdał niesprawiedliwy rzut karny. Szachy wymagają
+        też rywalizacji w postawie fair play oraz mają królewskie pochodzenie,
+        co w długoterminowej perspektywie może mieć realny wpływ na kreowanie
+        osobowości. Bez względu na wiek dziecka, szachy mogą rozwinąć nie tylko
+        jego koncentrację, ale też zwiększyć cierpliwość i wytrwałość. Rozgrywka
+        na „analogowej” planszy o 64 polach stoi w opozycji do szerokiej gamy
+        gier mobilnych, przepełnionych bodźcami stymulującymi i pobudzającymi
+        dziecko. Szachy przeżywają swój renesans i cieszą się zainteresowaniem
+        coraz szerszego grona rodziców oraz dzieci. Królewska gra uczy spokoju i
+        pozwala się skupić. Grając w szachy, jesteś tylko tu i teraz. Jesteś
+        tylko Ty, Twój przeciwnik oraz plansza. Nic innego, żadne zbędne kolory
+        i dźwięki nie odwracają Twojej uwagi. To sytuacja, która zdecydowanie
+        uspokaja i pozwala zachować równowagę w świecie przesyconym elektroniką.
+        Królewska gra może być też doskonałą okazją do rodzinnych spotkań.
+        Trudno znaleźć drugą taką grę, w której niezależnie od wieku możemy
+        rywalizować jak równy z równym. W szachach nie ma absolutnie żadnych
+        ograniczeń. Rodzic z dzieckiem przy szachownicy? A może pojedynek
+        pokoleń: dziadkowie stają do boju z młodszymi? Królewska gra ma w sobie
+        magię łączenia najróżniejszych osób we wspólnej pasji. Często grywa się
+        też w parkach. Kojarzysz duże szachy ogrodowe? W dużych miastach oraz
+        kurortach wypoczynkowych są szalenie popularne. Do wzrostu popularności
+        szachów przyczyniła się też kinematografia. Serial „Gambit królowej” zna
+        już większość (dorosłych), jednak ja polecam też film „Szachowe
+        dzieciństwo” o młodym, amerykańskim geniuszu szachowym, który można
+        obejrzeć całą rodziną.
+      </p>
+    </section>
+
+    <section>
+      <h2>🎯 Podsumowanie</h2>
+      <p>
+        Szachy są grą, która wzmacnia rozwój dzieci i młodzieży. Warto pamiętać
+        też, że pomagają budować relacje rodzinne i dla dorosłych może to być
+        świetny sposób na budowanie relacji z dziećmi. W końcu co jest lepszego
+        niż wspólnie spędzony czas z dala od komputera i tableta? Królewska gra
+        łączy pokolenia.
+      </p>
+    </section>
+
+    <section class="controls">
+      <p><a href="zajecia.html">← Powrót do planu zajęć</a></p>
     </section>
 
     <footer>
-      &copy; 2025 Kurs Szachowy dla Nauczycieli. Wszelkie prawa zastrzeżone.
+      &copy; 2025 Kurs Szachowy dla Nauczycieli. Wszystkie prawa zastrzeżone.
     </footer>
   </body>
 </html>
