--- a/gra.html
+++ b/gra.html
@@ -4,11 +4,6 @@
     <meta charset="UTF-8" />
     <title>Gra praktyczna – Zagraj w szachy</title>
     <link rel="stylesheet" href="style1.css" />
-    <!-- Chessboard.js CDN -->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css"
-    />
   </head>
   <body>
     <header>
@@ -16,10 +11,12 @@
       <p>Sprawdź swoją wiedzę w praktyce – zagraj w szachy!</p>
     </header>
 
-    <div id="board"></div>
-
     <div class="controls">
-      <button onclick="startNewGame()">Nowa gra</button>
+      <li>
+        <a href="https://lichess.org/training/coordinate" target="_blank"
+          >ćwiczenia współrzędnych</a
+        >
+      </li>
     </div>
 
     <section class="controls">
@@ -29,33 +26,5 @@
     <footer>
       &copy; 2025 Kurs Szachowy dla Nauczycieli. Wszelkie prawa zastrzeżone.
     </footer>
-
-    <!-- Chess.js + Chessboard.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.12.0/chess.min.js"></script>
-    <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js"></script>
-    <script>
-      const game = new Chess();
-      const board = Chessboard("board", {
-        draggable: true,
-        position: "start",
-        onDrop: function (source, target) {
-          const move = game.move({
-            from: source,
-            to: target,
-            promotion: "q",
-          });
-
-          if (move === null) return "snapback";
-        },
-        onSnapEnd: function () {
-          board.position(game.fen());
-        },
-      });
-
-      function startNewGame() {
-        game.reset();
-        board.start();
-      }
-    </script>
   </body>
 </html>
