--- a/drzewo1.html
+++ b/drzewo1.html
@@ -7,6 +7,9 @@
     <style>
       body {
         background-image: url("images/tree.png");
+        background-size: cover;
+
+        background-attachment: fixed;
       }
 
       .tile {
