--- a/drzewo1.html
+++ b/drzewo1.html
@@ -28,7 +28,7 @@
       }
 
       .tile-2 {
-        top: 30%;
+        top: 10%;
         left: 50%;
       }
 
@@ -97,7 +97,7 @@
       }
       .tooltip .tooltiptext {
         visibility: hidden;
-        width: 50px; /* Zmieniona szerokość dymka */
+        width: 100%; /* Zmieniona szerokość dymka */
         background-color: rgba(0, 0, 0, 0.7);
         color: #fff;
         text-align: center;
@@ -109,7 +109,7 @@
         left: 110%;
         opacity: 0;
         transition: opacity 0.3s;
-        font-size: 10px; /* Zmieniony rozmiar tekstu w dymku */
+        font-size: 100%; /* Zmieniony rozmiar tekstu w dymku */
       }
 
       .tooltip:hover .tooltiptext {
@@ -127,7 +127,7 @@
     <div class="tile tile-2">
       <div class="tooltip">
         <a href="drzewo1.html">
-          <img src="images/ptak0.png" width="100px" height="100px" />
+          <img src="images/sowa.png" width="100px" height="150px" />
           <span class="tooltiptext"><h5>Typowe motywy</h5></span></a
         >
       </div>
@@ -143,15 +143,15 @@
     <div class="tile tile-4">
       <div class="tooltip">
         <a href="https://lichess.org/study/D0s4rxGY/SuicxJaI"
-          ><img src="images/ptak2.png" width="100px" height="100px" />
+          ><img src="images/ptak4.png" width="100px" height="100px" />
           <span class="tooltiptext"><h5>Typowe pozycje</h5></span></a
         >
       </div>
     </div>
     <div class="tile tile-5">
       <div class="tooltip">
-        <a href="https://lichess.org/study/D0s4rxGY/DKYuTsoe"
-          ><img src="images/ptak0.png" width="100px" height="100px" />
+        <a href="rodzina2.html"
+          ><img src="images/wiewior.png" width="100px" height="100px" />
           <span class="tooltiptext"><h5>Słynni gracze</h5></span></a
         >
       </div>
