--- a/rodzina2.html
+++ b/rodzina2.html
@@ -2,7 +2,7 @@
 <html lang="pl">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>muzeum</title>
     <style>
       body {
@@ -186,7 +186,7 @@
         </div>
       </div>
       <div class="zmien3">
-        <a href="zamek.html"><button>Wróć</button></a>
+        <a href="drzewo1.html"><button>Wróć</button></a>
       </div>
     </div>
   </body>
