--- a/drzewo1.html
+++ b/drzewo1.html
@@ -116,12 +116,18 @@
         visibility: visible;
         opacity: 1;
       }
+      .zmien3 {
+        float: right;
+      }
     </style>
   </head>
   <body>
     <div class="image-container">
       <img src="images/jas2.png" alt="Obrazek w rogu" class="top-left-image" />
       <div class="image-caption">Gandalf</div>
+    </div>
+    <div class="zmien3">
+      <a href="jezioro.html"><button>Wróć</button></a>
     </div>
 
     <div class="tile tile-2">
