--- a/gra.html
+++ b/gra.html
@@ -17,6 +17,23 @@
           >ćwiczenia współrzędnych</a
         >
       </li>
+      <li>
+        <a
+          href="https://www.math.edu.pl/problem-skoczka-szachowego"
+          target="_blank"
+          >problem skoczka szachowego</a
+        >
+      </li>
+      <li>
+        <a href="https://www.math.edu.pl/problem-osmiu-hetmanow" target="_blank"
+          >problem ośmiu hetmanów</a
+        >
+      </li>
+      <li>
+        <a href="https://lichess.org/learn" target="_blank"
+          >bicie, obrona przed biciem</a
+        >
+      </li>
     </div>
 
     <section class="controls">
