--- a/gra.html
+++ b/gra.html
@@ -11,30 +11,98 @@
       <p>Sprawdź swoją wiedzę w praktyce – zagraj w szachy!</p>
     </header>
 
-    <div class="controls">
-      <li>
-        <a href="https://lichess.org/training/coordinate" target="_blank"
-          >ćwiczenia współrzędnych</a
-        >
-      </li>
-      <li>
-        <a
-          href="https://www.math.edu.pl/problem-skoczka-szachowego"
-          target="_blank"
-          >problem skoczka szachowego</a
-        >
-      </li>
-      <li>
-        <a href="https://www.math.edu.pl/problem-osmiu-hetmanow" target="_blank"
-          >problem ośmiu hetmanów</a
-        >
-      </li>
-      <li>
-        <a href="https://lichess.org/learn" target="_blank"
-          >bicie, obrona przed biciem</a
-        >
-      </li>
-    </div>
+    <section>
+      Ćwiczenia współrzędnych.
+      <a href="https://lichess.org/training/coordinate" target="_blank"
+        >ćwiczenia</a
+      >
+    </section>
+    <section>
+      Bicie, obrona przed biciem.
+      <a href="https://lichess.org/learn" target="_blank">ćwiczenia</a>
+    </section>
+    <section>
+      Problem skoczka szachowego – zadanie polega na odwiedzeniu skoczkiem
+      wszystkich pól na szachownicy. Pozycja początkowa skoczka jest dowolna ale
+      na każdym polu skoczek może być tylko jeden raz! Książka „Szachy Kurs
+      Podstawowy” Cz. Spisak Str. 29
+      <a
+        href="https://www.math.edu.pl/problem-skoczka-szachowego"
+        target="_blank"
+        >ćwiczenia</a
+      >
+    </section>
+    <section>
+      Problem ośmiu hetmanów - zadanie polega na znalezieniu takiego ustawienia
+      ośmiu hetmanów na szachownicy aby nie atakowały się wzajemnie (żaden z
+      nich nie może stać na tej samej linii lub przekątnej). Poniżej
+      przedstawiono jedno z rozwiązań, w sumie mamy ich 12 nie licząc
+      lustrzanych odbić i obrotów szachownicy. Książka „Szachy Kurs Podstawowy”
+      Cz. Spisak Str. 22
+      <a href="https://www.math.edu.pl/problem-osmiu-hetmanow" target="_blank"
+        >ćwiczenia</a
+      >
+    </section>
+    <section>
+      Z przymrużeniem oka – roszada Białe zaczynają i dają mata w „pół” ruchu.
+      Rozwiązaniem jest przestawienie wieży z pola a1 na pole d1. Należy
+      dokończyć posunięcie czyli roszadę. „Niewidzialna ręka” przestawiała króla
+      z pola e1 na c1
+      <a
+        href="https://lichess.org/analysis/8/8/8/8/8/8/1R6/R1K4k_w_-_-_0_1"
+        target="_blank"
+        >ćwiczenia</a
+      >
+    </section>
+    <section>
+      Roszada Pama-Krabbégo – roszada wymyślona w 1972 roku niezależnie przez 
+      Jeana-Luca Sereta  i  Maxa Pama  i opublikowana w 1974 przez Tima
+      Krabbégo. Polega na przesunięciu króla z pola e1 (białe) lub e8 (czarne)
+      na pole e3 (białe) lub e6 (czarne)
+      oraz wypromowanej uprzednio wieży (przed wykonaniem nią innego ruchu) na
+      e2 (białe) lub e7 (czarne). Tim Krabbé twierdził później,
+      że Międzynarodowa Federacja Szachowa (FIDE) zmieniła zasady w 1974, aby
+      „zdelegalizować” tę roszadę, jednak w rzeczywistości od 1930 jej przepisy
+      zezwalają na przestawienie króla i wieży wyłącznie w tym samym rzędzie
+      (wikipedia)
+      <a
+        href="https://lichess.org/analysis/rn2nN1q/2b2P2/3p1B1p/p1P2P2/8/rp6/bp6/2k1KR2_w_-_-_0_1#0"
+        target="_blank"
+        >ćwiczenia</a
+      ></br>Białe dają mata w 2 posunięcia 1.f7:e8W b1H(dowolny ruch) 2.0-0-0#(król z
+      e1 idzie na e3, wieża z e8 na e2)
+    </section>
+    <section>
+      ROSZADA - Łamigłówki
+Białe zaczynają i dają mata w 2 posunięcia.
+      <a
+        href="https://lichess.org/analysis/r3k3/p1p5/Q3K3/8/8/8/8/8_w_q_-_0_1"
+        target="_blank"
+        >ćwiczenia</a
+      ></br>1.Ha1! grozi mat na h8 przed którym nie ma obrony np. 1… Kf8 [1...Kd8 2.Hh8#] 2.Hh8#
+      Kluczem do rozwiązania łamigłówki jest odpowiedź na pytanie dlaczego czarne nie mogą
+      bronić się wykonując długą roszadę?
+      Z zasad gry wiemy, że roszada jest niedozwolona jeżeli król wykonał już posuniecie albo w
+      kierunku wieży która się poruszyła i nie ma to znaczenia czy figury te powróciły na pierwotne
+      pole. Z zadania możemy wywnioskować, że to właśnie miało miejsce. Skąd taki wniosek?
+      Aby to stwierdzić musimy odpowiedzieć na pytanie jaki był ostatni ruch czarnych? Czarny
+      musiał wykonać ruch wieżą lub królem. Piony stoją na pierwotnych polach a wiec nie mogły
+      się poruszyć.
+    </section>
+
+    <section>
+     
+      Znajdź błędy w ustawieniu bierek na szachownicy.
+      
+      Książka „Szachy Kurs Podstawowy” Cz. Spisak Str. 43
+      Rozwiązanie: Należy zamienić bierki miejscami – białe bierki stoją na miejscu czarnych a
+czarne na białych.
+      <a
+        href="https://lichess.org/analysis"
+        target="_blank"
+        >ćwiczenia</a
+      >
+    </section>
 
     <section class="controls">
       <p><a href="zajecia.html">← Wróć do strony głównej kursu</a></p>
