--- a/drzewo1.html
+++ b/drzewo1.html
@@ -140,7 +140,7 @@
     </div>
     <div class="tile tile-3">
       <div class="tooltip">
-        <a href="https://lichess.org/study/D0s4rxGY/DKYuTsoe"
+        <a href="hi.html"
           ><img src="images/ptak1.png" width="100px" height="100px" />
           <span class="tooltiptext"><h5>Historia</h5></span></a
         >
