--- a/drzewo2.html
+++ b/drzewo2.html
@@ -53,18 +53,6 @@
 
       .tile-6 {
         top: 50%;
-        left: 30%;
-      }
-      .tile-7 {
-        top: 80%;
-        left: 55%;
-      }
-      .tile-8 {
-        top: 30%;
-        left: 60%;
-      }
-      .tile-9 {
-        top: 10%;
         left: 60%;
       }
       .image-container {
@@ -139,70 +127,46 @@
       <div class="image-caption">Gandalf</div>
     </div>
     <div class="zmien3">
-      <a href="jezioro.html"><button>Wróć</button></a>
+      <a href="drzewo1.html"><button>Wróć</button></a>
     </div>
 
     <div class="tile tile-2">
       <div class="tooltip">
-        <a href="drzewo2.html">
-          <img src="images/sowa.png" width="100px" height="150px" />
-          <span class="tooltiptext"><h5>5.d3</h5></span></a
+        <a href="drzewo1.html">
+          <img src="images/elf.png" width="100px" height="150px" />
+          <span class="tooltiptext"><h5>Typowe motywy</h5></span></a
         >
       </div>
     </div>
     <div class="tile tile-3">
       <div class="tooltip">
         <a href="hi.html"
-          ><img src="images/ptak1.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>5.d4</h5></span></a
+          ><img src="images/skrzat.png" width="100px" height="100px" />
+          <span class="tooltiptext"><h5>Historia</h5></span></a
         >
       </div>
     </div>
     <div class="tile tile-4">
       <div class="tooltip">
         <a href="https://lichess.org/study/D0s4rxGY/SuicxJaI"
-          ><img src="images/ptak4.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>5.d4 exd4</h5></span></a
+          ><img src="images/elf2.png" width="100px" height="100px" />
+          <span class="tooltiptext"><h5>Typowe pozycje</h5></span></a
         >
       </div>
     </div>
     <div class="tile tile-5">
       <div class="tooltip">
         <a href="rodzina2.html"
-          ><img src="images/wiewior.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>6.cxd4</h5></span></a
+          ><img src="images/rycerz.png" width="100px" height="100px" />
+          <span class="tooltiptext"><h5>Słynni gracze</h5></span></a
         >
       </div>
     </div>
     <div class="tile tile-6">
       <div class="tooltip">
         <a href="https://lichess.org/study/D0s4rxGY/DKYuTsoe"
-          ><img src="images/ptak4.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>7.Gd2 Gxd2</h5></span></a
-        >
-      </div>
-    </div>
-    <div class="tile tile-7">
-      <div class="tooltip">
-        <a href="https://lichess.org/study/D0s4rxGY/DKYuTsoe"
-          ><img src="images/ptak2.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>7.Gd2 Sxe4</h5></span></a
-        >
-      </div>
-    </div>
-    <div class="tile tile-8">
-      <div class="tooltip">
-        <a href="https://lichess.org/study/D0s4rxGY/DKYuTsoe"
-          ><img src="images/ptak0.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>6.e5</h5></span></a
-        >
-      </div>
-    </div>
-    <div class="tile tile-9">
-      <div class="tooltip">
-        <a href="https://lichess.org/study/D0s4rxGY/DKYuTsoe"
-          ><img src="images/ptak2.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>Hungarian Defence</h5></span></a
+          ><img src="images/kras.png" width="100px" height="100px" />
+          <span class="tooltiptext"><h5>Plany gry</h5></span></a
         >
       </div>
     </div>
