--- a/hi.html
+++ b/hi.html
@@ -75,11 +75,19 @@
 
       <div id="content">
         <div class="text">
-          Jedno z najstarszych otwarć:** Analizowane już w XVI wieku przez Pedro
+          <p>
+            Giuoco Piano to nazwa otwarcia szachowego, która pochodzi z języka
+            włoskiego i oznacza dosłownie „spokojna gra” lub „cicha gra”. Jest
+            to klasyczny wariant partii włoskiej, powstający po ruchach: 1.e4 e5
+            2.Sf3 Sc6 3.Gc4 Gc5. Nazwa podkreśla charakter otwarcia – harmonijny
+            rozwój figur i spokojne, pozycyjne podejście do gry, bez gwałtownych
+            ataków w początkowej fazie partii.
+          </p>
+          Jedno z najstarszych otwarć: Analizowane już w XVI wieku przez Pedro
           Damiano i Giulio Cesare Polerio, a później przez włoskich mistrzów jak
-          Greco. - **Szczyt popularności w XIX wieku:** Grali ją m.in. Wilhelm
-          Steinitz, Paul Morphy, Adolf Anderssen. - **Współczesność:** W XXI
-          wieku Giuoco Piano przeżywa renesans, zwłaszcza w wariancie Giuoco
+          Greco. Szczyt popularności w XIX wieku: Grali ją m.in. Wilhelm
+          Steinitz, Paul Morphy, Adolf Anderssen. Współczesność: W XXI wieku
+          Giuoco Piano przeżywa renesans, zwłaszcza w wariancie Giuoco
           Pianissimo. Stosują ją najlepsi arcymistrzowie, m.in. Magnus Carlsen,
           Ian Nepomniachtchi, Viswanathan Anand, Vladimir Kramnik, Garry
           Kasparov i Anatolij Karpow.
