--- a/drzewo2.html
+++ b/drzewo2.html
@@ -149,7 +149,7 @@
     <div class="tile tile-4">
       <div class="tooltip">
         <a href="https://lichess.org/study/D0s4rxGY/SuicxJaI"
-          ><img src="images/elf2.png" width="100px" height="100px" />
+          ><img src="images/kras.png" width="100px" height="100px" />
           <span class="tooltiptext"><h5>Typowe pozycje</h5></span></a
         >
       </div>
@@ -165,7 +165,7 @@
     <div class="tile tile-6">
       <div class="tooltip">
         <a href="https://lichess.org/study/D0s4rxGY/DKYuTsoe"
-          ><img src="images/kras.png" width="100px" height="100px" />
+          ><img src="images/mag3.png" width="100px" height="100px" />
           <span class="tooltiptext"><h5>Plany gry</h5></span></a
         >
       </div>
