--- a/hi.html
+++ b/hi.html
@@ -45,7 +45,7 @@
         flex: 1;
       }
       .image {
-        width: 20%;
+        width: 100%;
       }
       a {
         color: rgb(35, 36, 36);
@@ -64,14 +64,14 @@
   <body>
     <div id="container">
       <div class="zmien3">
-        <a href="drzewo1.html"><button>Wróć</button></a>
+        <a href="drzewo2.html"><button>Wróć</button></a>
       </div>
       <div id="logo">
         <!-- wstaw imie i nazwisko w sekcji logo-->
         <h1>Giuoco Piano</h1>
       </div>
 
-      <div id="nav"></div>
+      <div id="nav"><img src="images/skrzat.png" class="image" /></div>
 
       <div id="content">
         <div class="text">
