--- a/hi.html
+++ b/hi.html
@@ -26,6 +26,7 @@
         float: left;
         background-color: white;
         width: 200px;
+        opacity: 0.8;
 
         height: 300px;
         padding: 10px;
