--- a/drzewo3.html
+++ b/drzewo3.html
@@ -6,7 +6,7 @@
     <title>Mapa</title>
     <style>
       body {
-        background-image: url("images/tree.png");
+        background-image: url("images/ocean.jpg");
         background-size: cover;
 
         background-attachment: fixed;
@@ -43,7 +43,7 @@
 
       .tile-4 {
         top: 70%;
-        left: 70%;
+        left: 50%;
       }
 
       .tile-5 {
@@ -145,7 +145,7 @@
     <div class="tile tile-2">
       <div class="tooltip">
         <a href="drzewo2.html">
-          <img src="images/sowa.png" width="100px" height="150px" />
+          <img src="images/ryba1.png" width="100px" />
           <span class="tooltiptext"><h5>5.0-0</h5></span></a
         >
       </div>
@@ -153,7 +153,7 @@
     <div class="tile tile-3">
       <div class="tooltip">
         <a href="hi.html"
-          ><img src="images/ptak1.png" width="100px" height="100px" />
+          ><img src="images/ryba1.png" width="100px" height="100px" />
           <span class="tooltiptext"><h5>5.e5</h5></span></a
         >
       </div>
@@ -161,7 +161,7 @@
     <div class="tile tile-4">
       <div class="tooltip">
         <a href="https://lichess.org/study/D0s4rxGY/SuicxJaI"
-          ><img src="images/ptak4.png" width="100px" height="100px" />
+          ><img src="images/ryba.png" width="100px" height="100px" />
           <span class="tooltiptext"><h5>Atak smażonej wątróbki</h5></span></a
         >
       </div>
