--- a/jezioro.html
+++ b/jezioro.html
@@ -108,12 +108,19 @@
         visibility: visible;
         opacity: 1;
       }
+      .zmien3 {
+        float: right;
+      }
     </style>
   </head>
   <body>
     <div class="image-container">
       <img src="images/jas2.png" alt="Obrazek w rogu" class="top-left-image" />
       <div class="image-caption">Gandalf</div>
+    </div>
+
+    <div class="zmien3">
+      <a href="mapa.html"><button>Wróć</button></a>
     </div>
     <div class="tile1 tooltip">
       <span class="tooltiptext"><h5>Gambit Evansa</h5></span>
