--- a/kraina.html
+++ b/kraina.html
@@ -6,11 +6,6 @@
     <title>Kraina</title>
     <style>
       body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
         background-image: url("images/kont.png");
         background-size: cover;
       }
@@ -89,7 +84,7 @@
         color: #f4f0f0; /* Kolor tekstu */
       }
       .zmien3 {
-        float: left;
+        float: right;
       }
     </style>
   </head>
@@ -97,9 +92,9 @@
     <div class="image-container">
       <img src="images/jas2.png" alt="Obrazek w rogu" class="top-left-image" />
       <div class="image-caption">Gandalf</div>
-      <div class="zmien3">
-        <a href="kosmos.html"><button>Wróć</button></a>
-      </div>
+    </div>
+    <div class="zmien3">
+      <a href="kosmos.html"><button>Wróć</button></a>
     </div>
 
     <div class="tile tile-1">
