--- a/jezioro.html
+++ b/jezioro.html
@@ -136,7 +136,7 @@
 
     <div class="tile tile-3">
       <div class="tooltip">
-        <a href="https://lichess.org/study/D0s4rxGY/SuicxJaI"
+        <a href="goblin.html"
           ><img src="images/ogr.png" width="100px" height="100px" />
           <span class="tooltiptext"><h5>Atak Maxa Lange</h5></span></a
         >
